--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <script>
-const baseURL = "https://askeele.github.io/trivia-rawr/categoria.html?cat=";
+const baseURL = "https://azkeele.github.io/trivia-rawr/categoria.html?cat=";
 const categorias = [
 "fama",
 "vinculos",
